--- a/block-BJaaiq/code/index.html
+++ b/block-BJaaiq/code/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Infinite scrolling</title>
+    <link rel="stylesheet" href="stylesheet/style.css" />
   </head>
-  <body></body>
+  <body>
+    <ul class="root_element"></ul>
+    <script src="quotes.js"></script>
+    <script src="script.js"></script>
+  </body>
 </html>
